# maistorage

./: .cursorignore  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  PHASE1_COMPLETE.md  PHASE2_COMPLETE.md  PLAN.md  README.md
services/indexer/: README.md  __init__.py  ingest.py  pyproject.toml  requirements.txt  verify_storage.py
services/rag_api/: .env.cloudrun  Dockerfile  PHASE2_VERIFICATION.md  cache.py  citer.py  context_condenser.py  deploy-cloudrun.sh  golden_qa.json  graph.py  llm_client.py  logging_config.py  main.py  main_cloudrun.py  main_simple.py  middleware.py  models.py  monitoring.py  pyproject.toml  rag_baseline.py  requirements-cloudrun.txt  requirements.txt  retrieval.py  retrieval_tuning.yaml  start.sh  test_evaluation.py  test_evaluation_structure.py  test_phase10_integration.py  test_retrieval.py  test_startup.py  tools.py  verify.py
services/rag_api/eval/: __init__.py  run_ragas.py
services/rag_api/eval/results/: evaluation_results_20250812_141620.csv  evaluation_results_20250812_141620.json  evaluation_results_20250812_141856.csv  evaluation_results_20250812_141856.json  evaluation_results_20250812_142233.csv  evaluation_results_20250812_142233.json  evaluation_results_20250812_142357.csv  evaluation_results_20250812_142357.json  evaluation_results_20250812_142615.csv  evaluation_results_20250812_142615.json  evaluation_results_20250812_142847.csv  evaluation_results_20250812_142847.json  evaluation_results_20250812_142921.csv  evaluation_results_20250812_142921.json  evaluation_results_20250812_144714.csv  evaluation_results_20250812_144714.json  evaluation_results_20250812_144843.csv  evaluation_results_20250812_144843.json  evaluation_results_20250812_145114.csv  evaluation_results_20250812_145114.json  evaluation_results_20250812_145157.csv  evaluation_results_20250812_145157.json  evaluation_results_20250812_145338.csv  evaluation_results_20250812_145338.json  evaluation_results_20250812_145453.csv  evaluation_results_20250812_145453.json  evaluation_results_20250812_145747.csv  evaluation_results_20250812_145747.json  evaluation_results_20250812_150614.csv  evaluation_results_20250812_150614.json  evaluation_results_20250812_151008.csv  evaluation_results_20250812_151008.json  evaluation_results_20250812_151150.csv  evaluation_results_20250812_151150.json  evaluation_results_20250812_151524.csv  evaluation_results_20250812_151524.json  evaluation_results_20250812_151629.csv  evaluation_results_20250812_151629.json  evaluation_results_20250812_152044.csv  evaluation_results_20250812_152044.json  (+14 more)
services/rag_api/prompts/: baseline.py  planner.py  verifier.py
services/rag_api/tests/: README.md  conftest.py  run_tests.py
services/rag_api/tests/edge_cases/: __init__.py  test_edge_cases.py
services/rag_api/tests/integration/: test_rag_workflows.py
(+56 files in other folders)
